# fastopp

./: .env  .gitignore  CONTRIBUTING.md  ENHANCED_FIX.md  Gemfile  LOCAL_TESTING_GUIDE.md  PULL_REQUEST.md  README.md  SQLADMIN_HTTPS_FIX.md  TESTING_GUIDE.md  _config.yml  add_sample_products.py  add_test_users.py  admin_auth.py  auth.py  cookies.txt  create_superuser.py  db.py  example.env  feed.xml  index.html  init_db.py  main.py  main_old.py  models.py  oppdemo.py  oppman.py  oppman_clean.py  pyproject.toml  requirements.txt  reset_database.py  simple_cdn_test.js  sitemap.xml  test.db  test.db.20250801_151854  test_ai_demo.py  test_cdn.html  test_cdn_fix.py  test_permanent_fix.py  users.py
_layouts/: default.html  home.html  post.html
_pages/: about.md
_posts/: 2025-09-29-deploy-to-leapcell.md  2025-09-29-welcome-to-fastopp.md
_site/: BRANCH-README.md  SETUP.md  feed.xml  index.html  preview.html  robots.txt  sitemap.xml
admin/: __init__.py  setup.py  views.py
alembic/: env.py
assets/: main.scss
auth/: __init__.py  admin.py  core.py  users.py
base_assets/: README.md  main.py
demo_assets/: README.md  main.py
demo_scripts/: add_sample_products.py  add_sample_webinar_registrants.py  clear_and_add_registrants.py  download_sample_photos.py
dependencies/: auth.py  config.py  database.py  services.py
docs/: ARCHITECTURE.md  DATABASE.md  DEPENDENCY_INJECTION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  EMERGENCY_ACCESS.md  FEATURES.md  HTTPS_SETUP.md  MIGRATION_GUIDE.md  README.md  SETUP.md  SQLADMIN_ICONS_FIX.md  authentication.md  basic_add_new_page.md  call_for_volunteers.md  fly_deployment.md  postgresql_install.md  (+2 more)
(+114 files in other folders)
