[project]
name = "fastopp"
version = "0.1.0"
authors = ["Oppkey"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.16",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]
