[project]
name = "fastopp"
version = "0.1.2"
authors = ["Oppkey"]
description = "FastAPI starter package for students prototyping AI web applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiohttp>=3.9.0",
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.16",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
    "markdown>=3.8.2",
    "pydantic-settings>=2.10.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.0",
    "boto3>=1.40.49",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.28.1",
    "pytest-xdist>=3.5.0",
]
